// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should not render description if not provided 1`] = `
<styled.label>
  label
</styled.label>
`;

exports[`Label should render 1`] = `
<styled.label>
  label
  <styled.div>
    description
  </styled.div>
</styled.label>
`;

exports[`Label should render an error when the label is not provided 1`] = `
<styled.label>
  <styled.div
    margin={true}
    small={true}
  >
    Missing label
  </styled.div>
  <styled.div>
    description
  </styled.div>
</styled.label>
`;
